# poolAllocator

./: .clang-format  LICENSE  README.md
customAllocator/: .gitignore  CMakeLists.txt  benchmark.cpp
customAllocator/.cache/clangd/index/: benchmark.cpp.85427D5B9CFECE52.idx  custAlloc.hpp.DBB7921C58259EEF.idx
customAllocator/custAlloc/: custAlloc.cpp  custAlloc.hpp
docs/: BENCHMARK.md
